@@ -152,7 +152,7 @@ class RDMTestThread(Thread):
     self._cv.release()
 
   def ScheduleTests(self, universe, uid, test_filter, broadcast_write_delay,
-                    dmx_frame_rate, slot_count):
+                    inter_test_delay, dmx_frame_rate, slot_count):
     """Schedule the tests to be run. Callable from any thread. Callbable by any
        thread.
 
@@ -169,7 +169,8 @@ class RDMTestThread(Thread):
 
     self._request = lambda : self._RunTests(universe, uid, test_filter,
                                             broadcast_write_delay,
-                                            dmx_frame_rate, slot_count)
+                                            inter_test_delay, dmx_frame_rate,
+                                            slot_count)
     self._cv.notify()
     self._cv.release()
     return None
@@ -231,7 +232,7 @@ class RDMTestThread(Thread):
     self._test_state_lock.release()
 
   def _RunTests(self, universe, uid, test_filter, broadcast_write_delay,
-                dmx_frame_rate, slot_count):
+                inter_test_delay, dmx_frame_rate, slot_count):
     self._test_state_lock.acquire()
     self._test_state = {
       'action': self.TESTS,
@@ -244,7 +245,8 @@ class RDMTestThread(Thread):
     self._test_state_lock.release()
 
     runner = TestRunner.TestRunner(universe, uid, broadcast_write_delay,
-                                   self._pid_store, self._wrapper)
+                                   inter_test_delay, self._pid_store,
+                                   self._wrapper)
 
     for test in TestRunner.GetTestClasses(TestDefinitions):
       runner.RegisterTest(test)
@@ -755,6 +757,14 @@ class RunTestsHandler(OLAServerRequestHandler):
     except ValueError:
       raise ServerException('Invalid broadcast write delay')
 
+    inter_test_delay = request.GetParam('i')
+    if inter_test_delay is None:
+      inter_test_delay = 0
+    try:
+      inter_test_delay = int(inter_test_delay)
+    except ValueError:
+      raise ServerException('Invalid inter-test delay')
+
     slot_count = request.GetParam('c')
     if slot_count is None:
       slot_count = 0
@@ -775,7 +785,8 @@ class RunTestsHandler(OLAServerRequestHandler):
 
     ret = self._test_thread.ScheduleTests(universe, uid, test_filter,
                                           broadcast_write_delay,
-                                          dmx_frame_rate, slot_count)
+                                          inter_test_delay, dmx_frame_rate,
+                                          slot_count)
     if ret is not None:
       raise ServerException(ret)
 
